header/hero_html

--- a/src/partials/1-header.html
+++ b/src/partials/1-header.html
@@ -1,6 +1,12 @@
 <header class="header">
   <div class="header-container container">
-    <h2 class="header-title">header</h2>
+    <a href="">LLOYDJEFFERSON.</a>
+    <ul>
+      <li>About me</li>
+      <li>Projects</li>
+      <li>Contacts</li>
+    </ul>
     <button id="toggle-night-mode">Нічний режим</button>
+    <button>Menu</button>
   </div>
 </header>
