--- a/src/partials/2-hero.html
+++ b/src/partials/2-hero.html
@@ -1,5 +1,24 @@
 <section class="section">
   <div class="hero-container container">
-    <h2 class="hero-title">hero</h2>
+    <h1 class="hero-title">Hello, I am Fullstack
+      developer</h1>
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <a href=""></a>
+    <div></div>
+    <p>I work with people all over the world to create <span>impressive</span> and <span>functional websites</span> that
+      reflect each client's
+      unique
+      personality.</p>
+    <div>
+      <ul>
+        <li>Insragram</li>
+        <li>Facebook</li>
+        <li>Linkedin</li>
+        <li>GitHub</li>
+      </ul>
+    </div>
   </div>
+
 </section>
